--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <body id="top">
+  <!--<section class="s-pageheader s-pageheader&#45;&#45;home" [@routerTransition]="getState(outlet)">-->
   <section class="s-pageheader s-pageheader--home">
 
     <app-header></app-header>
 
-    <router-outlet></router-outlet>
+    <main [@routerTransition]="getState(o)">
+      <router-outlet #o="outlet"></router-outlet>
+    </main>
 
     <app-footer></app-footer>
 
