--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -34,7 +34,7 @@
         <h4>Social</h4>
 
         <ul class="s-footer__linklist">
-          <li *ngFor="let social of socialsArr?.social">
+          <li *ngFor="let social of socialsArr">
             <a href="{{ social?.link}}">{{ social?.name}}</a>
           </li>
         </ul>
