--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,19 @@
 <header>
+  <div>
+  5555
+    <button (click)="logIn()">Log in</button>
+    <button (click)="logOut()">Log out</button>
+    <button (click)="register()">Register</button>
+  6666
+  </div>
+  <div>
+    777
+    <p>{{ message$ | async }}</p>
+
+    <button (click)="spanishMessage()">Spanish</button>
+    <button (click)="frenchMessage()">French</button>
+    888
+  </div>
   <div class="header__content row header-top">
 
     <ul class="header__social">
