--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,15 @@
 
   <section class="s-pageheader s-pageheader--home">
 
-    <app-header *ngIf="isAuthorized"></app-header>
+    <!--<app-header *ngIf="isAuthorized"></app-header>-->
+    <app-header></app-header>
 
     <main [@routerTransition]="getState(o)">
       <router-outlet #o="outlet"></router-outlet>
     </main>
 
-    <app-footer *ngIf="isAuthorized"></app-footer>
+    <!--<app-footer *ngIf="isAuthorized"></app-footer>-->
+    <app-footer></app-footer>
 
   </section>
 
