--- a/src/app/modules/homepage/components/featured/featured.component.scss
+++ b/src/app/modules/homepage/components/featured/featured.component.scss
@@ -7,7 +7,6 @@
   background-color: $gray1;
   position: relative;
 
-
   &__column {
    float: left;
   }
@@ -21,25 +20,18 @@
     position: relative;
     align-items: flex-end;
   }
-  //
   & .entry h1 {
     font-size: 3.6rem;
     line-height: 1.333;
     margin-top: 0;
     margin-bottom: 3rem;
   }
-  //
   & .entry h1 a {
     color: $white;
-    border-bottom: 1px solid transparent;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
+    text-decoration: none;
   }
-  //
-  & .entry h1 a:focus, & .entry h1 a:hover {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  }
-  //
   & .entry::before {
     display: block;
     content: "";
@@ -52,7 +44,6 @@
     opacity: .5;
     background-color: $gray1;
   }
-  //
   & .entry:hover::before {
     opacity: .8;
   }
@@ -73,30 +64,25 @@
     letter-spacing: .2rem;
     margin-bottom: 2.4rem;
   }
-  //
   & .entry__category a {
     display: inline-block;
     color: $white;
     padding: 0 1.5rem;
   }
-  //
   & .entry__info {
     position: relative;
   }
-  //
   & .entry__profile-pic {
     float: left;
     height: 4.2rem;
     width: 4.2rem;
     margin-top: -.9rem;
   }
-  //
   & .entry__profile-pic img {
     border-radius: 50%;
     max-width: 100%;
     max-height: 100%;
   }
-  //
   & .entry__meta {
     list-style: none;
     margin: 0 0 0 6rem;
@@ -105,33 +91,27 @@
     color: rgba(255, 255, 255, 0.5);
     line-height: 1.5;
   }
-  //
   & .entry__meta li {
     display: inline-block;
     padding-left: 0;
   }
-  //
   & .entry__meta li::after {
     content: '\2022';
     margin-left: 9px;
     margin-right: 6px;
   }
-  //
   & .entry__meta li:last-child::after {
     display: none;
   }
-  //
   & .entry__meta a {
     color: rgba(255, 255, 255, 0.5);
   }
-  //
   & .entry__meta a:focus, & .entry__meta a:hover {
     color: $white;
   }
 }
 
 :host(.featured__column--big) {
-  //width: 66.66666%;
   position: relative;
   grid-column: 1 / 3;
   grid-row: 1 / 3;
@@ -146,7 +126,6 @@
 }
 
 :host(.featured__column--small) {
-  //width: 33.333333333%;
   position: relative;
   grid-column: 3 / 4;
 
