--- a/src/app/scss/settings/variables.scss
+++ b/src/app/scss/settings/variables.scss
@@ -12,3 +12,5 @@ $base-font-family: 'Open Sans';  //metropolis-regular
 $heading-font-family: 'Libre Baskerville';
 
 $border-color: $blue;
+
+$header-min-height: 265px;
