--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
 <footer class="s-footer">
 
   <div class="s-footer__main">
-    <div class="row">
+    <div class="row" *ngIf="!footerMessage; else notAuthFooter">
 
       <div class="col-two md-four mob-full s-footer__sitelinks">
 
@@ -62,6 +62,13 @@
       </div> <!-- end s-footer__subscribe -->
 
     </div>
+
+    <ng-template #notAuthFooter>
+      <div class="row text-center">
+        {{ footerMessage }}
+      </div>
+    </ng-template>
+
   </div> <!-- end s-footer__main -->
 
   <div class="s-footer__bottom">
