--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -37,6 +37,28 @@ header {
   transform: rotate(-45deg);
 }
 
+.top-pannel {
+  color: rgba($white, .5);
+  font-size: 1.2rem;
+
+  ul {
+    li {
+      display: inline-block;
+      padding-left: 0;
+      cursor: pointer;
+      transition: color .3s ease-in-out;
+
+      &:hover {
+        color: rgba($white, .3);
+      }
+
+      & + li {
+        padding-left: 1.5rem;
+      }
+    }
+  }
+}
+
 /* ===================================================================
  * # pageheader
  *
